@@ -94,6 +94,9 @@ Other Changes
 * SOLR-4547: Move logging of filenames on commit from INFO to DEBUG.
   (Shawn Heisey, hossman)
 
+* SOLR-4757: Change the example to use the new solr.xml format and core 
+  discovery by directory structure. (Mark Miller)
+
 ==================  4.3.0 ==================
 
 Versions of Major Components
